Fri Sep 20 16:19:03 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/opensplice/servant/OpenSplice.inl:

          Updated default DataWriter and DataReader QoS to replicate
          the topic QoS.  This occurs prior to setting the QoS from the
          dpd files.

        * tests/iccm/opensplice/ParticipantQoS/descriptors/ReceiverQoS.dpd:
        * tests/iccm/opensplice/ParticipantQoS/descriptors/SenderQoS.dpd:

          Found the presentation properties set on the publisher and subscriber
          was causing problems with the partition functionality.

Mon Sep 16 16:54:06 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Servant.h:
        * cuts/iccm/arch/dds/servant/DDS_Servant_T.h:
        * cuts/iccm/arch/dds/servant/DDS_Servant_T.cpp:

          Modified hooks to require the topic name to be specified when
          configuring datawriters.

        * cuts/iccm/arch/opensplice/servant/OpenSplice_Servant.cpp:
        * cuts/iccm/arch/rtidds/servant/RTIDDS_Servant.cpp:

          Modified to get the topic name from the QoS settings.  If none
          is provided, the port name is used.

        * etc/schemas/iccm/dds.xsd:

          Added topic_name attribute to the DataWriter object.

        * tests/iccm/opensplice/ParticipantQoS/descriptors/SenderQoS.dpd:

          Updated to show an example of overriding the topic name.

Thu Sep  5 12:32:42 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/utils/Command_Substitution.h:

          Added include due to compilation errors with ACE trunk

Mon Aug 12 14:06:54 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/utils/node/Node_Daemon.h:

          Fixed define guard with ACE trunk

Tue Jul 30 16:45:45 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/deployment/Container_T.h:
        * cuts/iccm/deployment/Container_T.cpp:

          Fixed compilation errors with TAO trunk
