@@ -1,3 +1,15 @@
+Mon Sep 30 14:53:01 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/utils/testing/TAO_Testing_Service.h:
+        * cuts/utils/testing/TAO_Testing_Service.cpp:
+
+          Added method to block until the orb does not have any more work to do
+
+        * cuts/utils/testing/svcs/logging/Testing_Log_Message_Listener.cpp:
+
+          Fixed bug where the Listener was destroyed while log messages were
+          still being processed.
+
 Fri Sep 20 16:19:03 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/iccm/arch/opensplice/servant/OpenSplice.inl:
